--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-numpy >=1.22.2
-Flask >= 2.1.2
-pandas >= 1.4.2
-sklearn >= 0.0
-keras == 2.9.0
+Flask
+gunicorn
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+scipy
+scikit-learn
+matplotlib
+pandas
